fix vertical alignment of sum in Firefox
has weird extra width when widest row is the from limit

Conflicts:

	css/mathquill.css

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -263,7 +263,11 @@
   .large-operator {
     text-align: center;
 
-    .from, big, .to  {
+    big {
+      display: inline-block;
+    }
+
+    .from, .to  {
       display: block;
     }
     .from, .to  {
